# hollerith

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.rst  api_reference.html  genindex.html  index.html  objects.inv  pyproject.toml  robots.txt  search.html  searchindex.js  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
API/: field.html  write.html
doc/: Makefile  make.bat
doc/source/: api_reference.rst  class_documentation.rst  conf.py  index.rst  write_primitive_types.rst
doc/source/API/: write.rst
requirements/: requirements_doc.txt  requirements_docs.txt  requirements_test.txt
src/: __init__.py  _version.py  _writer.c  _writer.pyx  field.py  pythoncapi_compat.h  table.py  writer.c  writer.h
tests/: test_errors.py  test_field_writer.py  test_float_writer.py  test_table_writer.py
version/: index.html
version/0.5/: api_reference.html  genindex.html  index.html  objects.inv  search.html
version/0.5/API/: announcement.html  field.html  write.html
version/0.5/_sources/API/: field.rst.txt
version/0.5/_static/: search.json
version/0.6/: api_reference.html  index.html  search.html
version/0.6/API/: write.html
version/dev/: api_reference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/API/: field.html  write.html
version/dev/_static/: search.json
version/stable/: genindex.html  index.html  objects.inv
version/stable/API/: field.html
version/stable/_static/: search.json
